<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home_white"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/icon_calendar_white"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_add_black_30dp"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/icon_notification_white"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/icon_setting_white"
        android:title="@string/title_account" />

</menu>